--- a/Assembly-CSharp-Editor.csproj
+++ b/Assembly-CSharp-Editor.csproj
@@ -56,9 +56,10 @@
     <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio Tools for Unity\16.0\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Editor\InjectTool.cs" />
     <Compile Include="Assets\ThirdParty\Unity-Logs-Viewer-master\Reporter\Editor\ReporterEditor.cs" />
     <Compile Include="Assets\Editor\MenuItem.cs" />
-    <Compile Include="Assets\Editor\InjectTool.cs" />
+    <Compile Include="Assets\Editor\HookEditor.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
@@ -298,9 +299,6 @@
     <Reference Include="SyntaxTree.VisualStudio.Unity.Bridge">
       <HintPath>C:\Program Files (x86)\Microsoft Visual Studio Tools for Unity\16.0\Editor\SyntaxTree.VisualStudio.Unity.Bridge.dll</HintPath>
     </Reference>
-    <Reference Include="MonitorLib">
-      <HintPath>Assets\Lib\EditorDll\MonitorLib.dll</HintPath>
-    </Reference>
     <Reference Include="Mono.Cecil">
       <HintPath>Assets\Plugins\Cecil\Mono.Cecil.dll</HintPath>
     </Reference>
@@ -309,6 +307,9 @@
     </Reference>
     <Reference Include="Mono.Cecil.Mdb">
       <HintPath>Assets\Plugins\Cecil\Mono.Cecil.Mdb.dll</HintPath>
+    </Reference>
+    <Reference Include="MonitorLib">
+      <HintPath>Assets\Lib\EditorDll\MonitorLib.dll</HintPath>
     </Reference>
     <Reference Include="nunit.framework">
       <HintPath>Library\PackageCache\com.unity.ext.nunit@1.0.6\net35\unity-custom\nunit.framework.dll</HintPath>
