--- a/MonitorLib/MonitorLib/MonitorLib.csproj
+++ b/MonitorLib/MonitorLib/MonitorLib.csproj
@@ -296,6 +296,7 @@
     <Compile Include="GOT\FileManager.cs" />
     <Compile Include="GOT\FileUploadManager.cs" />
     <Compile Include="GOT\FunctionMonitorDatas.cs" />
+    <Compile Include="GOT\HookUtil.cs" />
     <Compile Include="GOT\LogManager.cs" />
     <Compile Include="GOT\MonitorAttributes.cs" />
     <Compile Include="GOT\MonitorInfo.cs" />
