--- a/MonitorLib/MonitorLib-Editor/MonitorLib-Editor.csproj
+++ b/MonitorLib/MonitorLib-Editor/MonitorLib-Editor.csproj
@@ -294,6 +294,9 @@
     <Compile Include="..\MonitorLib\GOT\ShareDatas.cs">
       <Link>GOT\ShareDatas.cs</Link>
     </Compile>
+    <Compile Include="..\MonitorLib\GOT\Utils\ConverUtils.cs">
+      <Link>GOT\Utils\ConverUtils.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
