添加发送邮件和函数性能监控报告,目前函数报告数据有问题

--- a/MonitorLib/MonitorLib-Editor/MonitorLib-Editor.csproj
+++ b/MonitorLib/MonitorLib-Editor/MonitorLib-Editor.csproj
@@ -294,6 +294,9 @@
     <Compile Include="..\MonitorLib\GOT\ShareDatas.cs">
       <Link>GOT\ShareDatas.cs</Link>
     </Compile>
+    <Compile Include="..\MonitorLib\GOT\Tools.cs">
+      <Link>GOT\Tools.cs</Link>
+    </Compile>
     <Compile Include="..\MonitorLib\GOT\Utils\ConverUtils.cs">
       <Link>GOT\Utils\ConverUtils.cs</Link>
     </Compile>
