--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -59,10 +59,12 @@
     <Compile Include="Assets\ThirdParty\Unity-Logs-Viewer-master\Reporter\Test\Rotate.cs" />
     <Compile Include="Assets\ThirdParty\Unity-Logs-Viewer-master\Reporter\Test\TestReporter.cs" />
     <Compile Include="Assets\ThirdParty\Unity-Logs-Viewer-master\Reporter\ReporterGUI.cs" />
-    <Compile Include="Assets\GOT\Scripts\GOTProfiler.cs" />
     <Compile Include="Assets\GOT\Scripts\HyperlinkText.cs" />
     <Compile Include="Assets\ThirdParty\Unity-Logs-Viewer-master\Reporter\MultiKeyDictionary.cs" />
+    <Compile Include="Assets\GOT\Scripts\GOTProfiler.cs" />
+    <Compile Include="Assets\GOT\Scripts\UnityMobileBridge.cs" />
     <Compile Include="Assets\ThirdParty\Unity-Logs-Viewer-master\Reporter\Reporter.cs" />
+    <Compile Include="Assets\Demo\UnityAndroidInteract.cs" />
     <Compile Include="Assets\ThirdParty\Unity-Logs-Viewer-master\Reporter\ReporterMessageReceiver.cs" />
     <Compile Include="Assets\Demo\InjectDemo.cs" />
   </ItemGroup>
