--- a/MonitorLib/MonitorLib/MonitorLib.csproj
+++ b/MonitorLib/MonitorLib/MonitorLib.csproj
@@ -298,6 +298,7 @@
     <Compile Include="GOT\FileUploadManager.cs" />
     <Compile Include="GOT\FunctionMonitorDatas.cs" />
     <Compile Include="GOT\HookUtil.cs" />
+    <Compile Include="GOT\LogInfos.cs" />
     <Compile Include="GOT\LogManager.cs" />
     <Compile Include="GOT\MonitorAttributes.cs" />
     <Compile Include="GOT\MonitorInfo.cs" />
