--- a/MonitorLib/MonitorLib/MonitorLib.csproj
+++ b/MonitorLib/MonitorLib/MonitorLib.csproj
@@ -291,6 +291,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GOT\CSVHelper.cs" />
+    <Compile Include="GOT\DevicePowerConsumeInfo.cs" />
     <Compile Include="GOT\IBinarySerialize.cs" />
     <Compile Include="GOT\Config.cs" />
     <Compile Include="GOT\DeviceInfo.cs" />
