--- a/MonitorLib/MonitorLib-Editor/MonitorLib-Editor.csproj
+++ b/MonitorLib/MonitorLib-Editor/MonitorLib-Editor.csproj
@@ -268,6 +268,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\MonitorLib\GOT\CollectDatas.cs">
+      <Link>GOT\CollectDatas.cs</Link>
+    </Compile>
     <Compile Include="..\MonitorLib\GOT\Config.cs">
       <Link>GOT\Config.cs</Link>
     </Compile>
@@ -309,6 +312,12 @@
     </Compile>
     <Compile Include="..\MonitorLib\GOT\MonitorInfo.cs">
       <Link>GOT\MonitorInfo.cs</Link>
+    </Compile>
+    <Compile Include="..\MonitorLib\GOT\RecoreInfo.cs">
+      <Link>GOT\RecoreInfo.cs</Link>
+    </Compile>
+    <Compile Include="..\MonitorLib\GOT\RenderInfo.cs">
+      <Link>GOT\RenderInfo.cs</Link>
     </Compile>
     <Compile Include="..\MonitorLib\GOT\ShareDatas.cs">
       <Link>GOT\ShareDatas.cs</Link>
