--- a/MonitorLib/MonitorLib/MonitorLib.csproj
+++ b/MonitorLib/MonitorLib/MonitorLib.csproj
@@ -300,6 +300,7 @@
     <Compile Include="GOT\CollectDatas.cs" />
     <Compile Include="GOT\DevicePowerConsumeInfo.cs" />
     <Compile Include="GOT\FuncAnalysisInfo.cs" />
+    <Compile Include="GOT\GOTProfilerRuntime.cs" />
     <Compile Include="GOT\IBinarySerialize.cs" />
     <Compile Include="GOT\Config.cs" />
     <Compile Include="GOT\DeviceInfo.cs" />
