--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -60,16 +60,23 @@
     <Compile Include="Assets\ThirdParty\Unity-Logs-Viewer-master\Reporter\Test\TestReporter.cs" />
     <Compile Include="Assets\ThirdParty\Unity-Logs-Viewer-master\Reporter\ReporterGUI.cs" />
     <Compile Include="Assets\GOT\Scripts\GOTProfiler.cs" />
+    <Compile Include="Assets\Scripts\IBinarySerializable.cs" />
+    <Compile Include="Assets\Scripts\FileManager.cs" />
     <Compile Include="Assets\GOT\Scripts\HyperlinkText.cs" />
     <Compile Include="Assets\ThirdParty\Unity-Logs-Viewer-master\Reporter\MultiKeyDictionary.cs" />
     <Compile Include="Assets\ThirdParty\Unity-Logs-Viewer-master\Reporter\Reporter.cs" />
+    <Compile Include="Assets\Scripts\NewBehaviourScript.cs" />
+    <Compile Include="Assets\Scripts\avatarguideTest.cs" />
     <Compile Include="Assets\ThirdParty\Unity-Logs-Viewer-master\Reporter\ReporterMessageReceiver.cs" />
     <Compile Include="Assets\Demo\InjectDemo.cs" />
+    <Compile Include="Assets\Scripts\avatarkneadface.cs" />
   </ItemGroup>
   <ItemGroup>
+     <None Include="Assets\Lib\LitJson.dll" />
      <None Include="Assets\link.xml" />
      <None Include="Assets\Lib\EditorDll\MonitorLib.dll" />
      <None Include="Assets\Lib\MonitorLib.dll" />
+     <None Include="Assets\Lib\Newtonsoft.Json.dll" />
     <Reference Include="UnityEngine">
       <HintPath>C:\Program Files\Unity2020\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
     </Reference>
